All_Component_DX/force-app/main/default/objects/PM_Plan__c/PM_Plan__c.object-meta.xml
<CustomObject>
    <customHelpPage>SVMX_LaunchHelp</customHelpPage>
    <description>Preventive Maintenance Plans for various customer contracts and automatically initiating execution of such maintenance plans using work orders.</description>
    <label>Preventive Maintenance Plan</label>
    <nameField>
        <label>PM Plan Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Preventive Maintenance Plans</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>