All_Component_DX/force-app/main/default/objects/PM_Plan__c/fields/Activation_Notes__c.field-meta.xml
<CustomField>
    <fullName>Activation_Notes__c</fullName>
    <description>Preventive Maintenance Plan  Activation Notes</description>
    <inlineHelpText>Preventive Maintenance Plan  Activation Notes</inlineHelpText>
    <label>Activation Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>