All_Component_DX/force-app/main/default/objects/PM_Plan__c/fields/Activity_On_Success__c.field-meta.xml
<CustomField>
    <fullName>Activity_On_Success__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Create an activity in PM Plan upon successful execution</description>
    <label>Create Activity on Success</label>
    <type>Checkbox</type>
</CustomField>