All_Component_DX/force-app/main/default/objects/PM_Plan__c/fields/Canceled_By__c.field-meta.xml
<CustomField>
    <fullName>Canceled_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Name of the Salesforce user that canceled this Preventive Maintenance Plan</description>
    <inlineHelpText>Name of the Salesforce user that canceled this Preventive Maintenance Plan</inlineHelpText>
    <label>Canceled By</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Preventive_Maintenance_Plans</relationshipName>
    <type>Lookup</type>
</CustomField>