All_Component_DX/force-app/main/default/objects/PM_Plan__c/fields/Case_Assign_To__c.field-meta.xml
<CustomField>
    <fullName>Case_Assign_To__c</fullName>
    <description>Indicates if the PM case should be assigned to a user or queue</description>
    <label>Case Assign To</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>User</fullName>
            </value>
            <value>
                <fullName>Queue</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>