All_Component_DX/force-app/main/default/objects/PM_Plan__c/fields/Case_Assign_To_Queue__c.field-meta.xml
<CustomField>
    <fullName>Case_Assign_To_Queue__c</fullName>
    <description>Name of the Salesforce queue to assign the PM Case to</description>
    <label>Case Assign To Queue</label>
    <length>100</length>
    <type>Text</type>
</CustomField>