All_Component_DX/force-app/main/default/objects/PM_Plan__c/fields/Case_Assign_To_User__c.field-meta.xml
<CustomField>
    <fullName>Case_Assign_To_User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Name of the Salesforce user to assign the PM Case to</description>
    <label>Case Assign To User</label>
    <referenceTo>User</referenceTo>
    <relationshipName>PM_Plan_Case_User</relationshipName>
    <type>Lookup</type>
</CustomField>