All_Component_DX/force-app/main/default/objects/PM_Plan__c/fields/Create_Case__c.field-meta.xml
<CustomField>
    <fullName>Create_Case__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates if Cases should be created with PM work orders</description>
    <label>Create Case</label>
    <type>Checkbox</type>
</CustomField>