All_Component_DX/force-app/main/default/objects/PM_Plan__c/fields/Create_Parts_Requests__c.field-meta.xml
<CustomField>
    <fullName>Create_Parts_Requests__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates if Parts Requests should be automatically created when creating PM work orders</description>
    <label>Create Parts Requests</label>
    <type>Checkbox</type>
</CustomField>