All_Component_DX/force-app/main/default/objects/PM_Plan__c/fields/Create_Work_Order__c.field-meta.xml
<CustomField>
    <fullName>Create_Work_Order__c</fullName>
    <description>Indicates how many days in advance work orders will be created for this PM plan</description>
    <label>Create Work Order</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>