All_Component_DX/force-app/main/default/objects/PM_Plan__c/fields/Dispatch_Process__c.field-meta.xml
<CustomField>
    <fullName>Dispatch_Process__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Dispatch process to route the preventive maintenance plan to</description>
    <label>Dispatch Process</label>
    <referenceTo>ServiceMax_Processes__c</referenceTo>
    <relationshipName>PM_Plan</relationshipName>
    <type>Lookup</type>
</CustomField>