All_Component_DX/force-app/main/default/objects/PM_Plan__c/fields/End_Date__c.field-meta.xml
<CustomField>
    <fullName>End_Date__c</fullName>
    <description>End Date for the preventive maintenance plan</description>
    <label>End Date</label>
    <type>Date</type>
</CustomField>