All_Component_DX/force-app/main/default/objects/PM_Plan__c/fields/Error_Email_ID__c.field-meta.xml
<CustomField>
    <fullName>Error_Email_ID__c</fullName>
    <description>Email ID to receive Error Notifications</description>
    <label>Error Email</label>
    <type>Email</type>
</CustomField>