All_Component_DX/force-app/main/default/objects/PM_Plan__c/fields/Field_map_for_wo__c.field-meta.xml
<CustomField>
    <fullName>Field_map_for_wo__c</fullName>
    <description>Field mapping id for creating Work Order</description>
    <label>Field map to use to create Work Order</label>
    <length>100</length>
    <type>Text</type>
</CustomField>