All_Component_DX/force-app/main/default/objects/PM_Plan__c/fields/Last_PM_Date__c.field-meta.xml
<CustomField>
    <fullName>Last_PM_Date__c</fullName>
    <description>Date on which the preventive maintenance plan was last run</description>
    <label>Last PM Date</label>
    <type>Date</type>
</CustomField>