All_Component_DX/force-app/main/default/objects/PM_Plan__c/fields/Location__c.field-meta.xml
<CustomField>
    <fullName>Location__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Location</label>
    <referenceTo>Site__c</referenceTo>
    <relationshipLabel>Preventive Maintenance Plans</relationshipLabel>
    <relationshipName>Preventive_Maintenance_Plans</relationshipName>
    <type>Lookup</type>
</CustomField>