All_Component_DX/force-app/main/default/objects/PM_Plan__c/fields/Processed__c.field-meta.xml
<CustomField>
    <fullName>Processed__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Flag indicates if the PM plan has been processed successfully during a run</description>
    <label>Processed</label>
    <type>Checkbox</type>
</CustomField>