All_Component_DX/force-app/main/default/objects/PM_Plan__c/fields/Schedule_Type__c.field-meta.xml
<CustomField>
    <fullName>Schedule_Type__c</fullName>
    <description>Indicates how the PM plan is scheduled: Using Counters, Using Dates or Using Both</description>
    <label>Schedule Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Time Based</fullName>
                <default>true</default>
                <label>Time Based</label>
            </value>
            <value>
                <fullName>Counter Based</fullName>
            </value>
            <value>
                <fullName>Time &amp; Counters</fullName>
            </value>
            <value>
                <fullName>Condition Based</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>