All_Component_DX/force-app/main/default/objects/PM_Plan__c/fields/SLA_Terms__c.field-meta.xml
<CustomField>
    <fullName>SLA_Terms__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>SLA Terms to use when creating Case and work orders as per the PM plan.</description>
    <label>SLA Terms</label>
    <referenceTo>Service_Level__c</referenceTo>
    <relationshipName>PM_Plan</relationshipName>
    <type>Lookup</type>
</CustomField>