All_Component_DX/force-app/main/default/objects/PM_Plan__c/fields/SM_Activity_Date_To_Consider__c.field-meta.xml
<CustomField>
    <fullName>SM_Activity_Date_To_Consider__c</fullName>
    <description>This field will be applicable only if the PM plan is configured with one per product. It defines whether activity of first or last work order to be considered for next scheduled date calculation.</description>
    <label>Activity Work Order</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>First Activity</fullName>
            </value>
            <value>
                <fullName>Last Activity</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>