All_Component_DX/force-app/main/default/objects/PM_Plan__c/fields/SM_Adjustment_Type__c.field-meta.xml
<CustomField>
    <fullName>SM_Adjustment_Type__c</fullName>
    <description>This field is to indicate the adjustment type.</description>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Actual</fullName>
            </value>
            <value>
                <fullName>Fixed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>