All_Component_DX/force-app/main/default/objects/PM_Plan__c/fields/Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Start_Date__c</fullName>
    <description>Start date for the preventive maintenance plan</description>
    <label>Start Date</label>
    <type>Date</type>
</CustomField>