All_Component_DX/force-app/main/default/objects/PM_Plan__c/fields/Success_Email_ID__c.field-meta.xml
<CustomField>
    <fullName>Success_Email_ID__c</fullName>
    <description>Email ID to receive Success Notification</description>
    <label>Success Email</label>
    <type>Email</type>
</CustomField>