All_Component_DX/force-app/main/default/objects/PM_Plan__c/fields/Task_Template__c.field-meta.xml
<CustomField>
    <fullName>Task_Template__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Name of the task template to use for the PM work orders. Reference to an existing Task Template in ServiceMax</description>
    <label>Task Template</label>
    <referenceTo>Task_Template__c</referenceTo>
    <relationshipName>PM_Plan</relationshipName>
    <type>Lookup</type>
</CustomField>