All_Component_DX/force-app/main/default/objects/PM_Plan__c/fields/Time_and_Counters__c.field-meta.xml
<CustomField>
    <fullName>Time_and_Counters__c</fullName>
    <description>Indicates the tie-breaking rule between validity dates and counters for a product.</description>
    <label>Time &amp; Counters</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Which Ever Comes First</fullName>
                <default>true</default>
                <label>Which Ever Comes First</label>
            </value>
            <value>
                <fullName>Which Ever Comes Last</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>