All_Component_DX/force-app/main/default/objects/PM_Plan__c/fields/Work_Order_Assign_To__c.field-meta.xml
<CustomField>
    <fullName>Work_Order_Assign_To__c</fullName>
    <description>Indicates if the PM work order should be assigned to a user or queue</description>
    <label>Work Order Assign To</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>User</fullName>
                <default>true</default>
                <label>User</label>
            </value>
            <value>
                <fullName>Queue</fullName>
            </value>
            <value>
                <fullName>Primary Technician</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>