All_Component_DX/force-app/main/default/objects/PM_Plan__c/fields/Work_Order_Assign_To_Queue__c.field-meta.xml
<CustomField>
    <fullName>Work_Order_Assign_To_Queue__c</fullName>
    <description>Name of the Salesforce queue to assign the PM work order to</description>
    <label>Work Order Assign To Queue</label>
    <length>100</length>
    <type>Text</type>
</CustomField>