All_Component_DX/force-app/main/default/objects/PM_Plan__c/fields/Work_Order_Assign_To_User__c.field-meta.xml
<CustomField>
    <fullName>Work_Order_Assign_To_User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Name of the Salesforce user to assign the PM work order to</description>
    <label>Work Order Assign To User</label>
    <referenceTo>User</referenceTo>
    <relationshipName>PM_Plan_WO_User</relationshipName>
    <type>Lookup</type>
</CustomField>