All_Component_DX/force-app/main/default/objects/PM_Plan__c/fields/Work_Order_Date__c.field-meta.xml
<CustomField>
    <fullName>Work_Order_Date__c</fullName>
    <description>Date on which next work orders will be created for this PM plan. Calculated based on Next PM Date and number of work order days</description>
    <label>Work Order Date</label>
    <type>Date</type>
</CustomField>