All_Component_DX/force-app/main/default/objects/PM_Plan__c/validationRules/PM_Plan_Start_End_Date_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>PM_Plan_Start_End_Date_Validation</fullName>
    <active>true</active>
    <description>Start date of preventive maintenance plan cannot be less than end time.</description>
    <errorConditionFormula>IF( Start_Date__c &gt;  End_Date__c, true, false)</errorConditionFormula>
    <errorMessage>End date should be greater than start date of Preventive Maintenance Plan</errorMessage>
</ValidationRule>