All_Component_DX/force-app/main/default/objects/PM_Plan__c/listViews/All_Preventive_Plans.listView-meta.xml
<ListView>
    <fullName>All_Preventive_Plans</fullName>
    <columns>NAME</columns>
    <columns>Account__c</columns>
    <columns>Service_Contract__c</columns>
    <columns>Start_Date__c</columns>
    <columns>End_Date__c</columns>
    <columns>CREATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <label>All Preventive Plans</label>
    <language>en_US</language>
</ListView>